--- a/css/styling.css
+++ b/css/styling.css
@@ -1,17 +1,20 @@
-body {
+html {
     background-color: #222831;
+}
+
+body .pageone {
+    background-color: #222831;
+    min-height: 100vh !important;
+    height: 100vh;
     overflow: hidden;
 }
 
 .pageone {
     display: block;
-    position: absolute;
-    padding: 0;
-    margin: 0;
-    margin-top: 0;
-    margin-left: 0;
+    position: relative;
     width: 100%;
-    height: 100%;
+    padding: 0;
+    margin: 0; 
     background-color: #222831;
     opacity: 100%;
 }
@@ -19,14 +22,13 @@ body {
 .pagetwo {
     display: block;
     position: absolute;
-    padding: 0;
-    margin: 0;
-    margin-top: 0;
-    margin-left: 0;
-    width: 100%;
-    height: 100%;
+    padding: 0px;
+    margin: 0px;
+    min-height: 100vh !important;
+    height: 100vh;
+    width: auto;
     background-color: #222831;
-    opacity: 0%;
+    opacity: 50%;
     /*disable all pointer events so it does not interfere with first page*/
     pointer-events: none;
 }
@@ -149,18 +151,22 @@ body {
     border-radius: 50%;
 }
 
-.chevron {
+.chevronpageone{
     display: block;
     margin: auto;
-    margin-top: 12%;
+    margin-top: 10%;
+}
+
+.chevronpagetwo{
+    display: block;
+    margin: auto;
+    margin-bottom: 2%;
 }
 
 .chevron img {
     color: #ececec;
     width: 40px;
     height: 80px;
-    margin: auto;
-    padding-bottom: 10px;
 }
 
 /* styling or all icons */
