need to fix navbar centering issue

--- a/css/styling.css
+++ b/css/styling.css
@@ -1,5 +1,7 @@
 html {
     background-color: #222831;
+    scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 body .pageone {
@@ -21,16 +23,28 @@ body .pageone {
 
 .pagetwo {
     display: block;
-    position: absolute;
+    position: relative;
     padding: 0px;
     margin: 0px;
     min-height: 100vh !important;
     height: 100vh;
     width: auto;
     background-color: #222831;
-    opacity: 50%;
-    /*disable all pointer events so it does not interfere with first page*/
-    pointer-events: none;
+    opacity: 100%;
+    pointer-events: all;
+}
+
+.pagethree {
+    display: block;
+    position: relative;
+    padding: 0px;
+    margin: 0px;
+    min-height: 100vh !important;
+    height: 100vh;
+    width: auto;
+    background-color: #222831;
+    opacity: 100%;
+    pointer-events: all;
 }
 
 .projectspage {
@@ -41,7 +55,7 @@ body .pageone {
     height: 100%;
     opacity: 100%;
     scroll-behavior: auto;
-    overflow-y: auto;
+    overflow-y: auto !important;
 }
 
 .header {
@@ -77,6 +91,7 @@ body .pageone {
 .navigationbar button {
     /*Must use important to overide materialize css defaults*/
     width: auto;
+    display: block;
     height: 40px;
     background-color: #222831;
     color: black;
@@ -91,14 +106,14 @@ body .pageone {
 }
 
 .navigationbar button:focus {     
-    background-color: #f2a365 !important;    
+    background-color: #f2a365;    
 }
 
 .selectedbutton {
     /*Must use important to overide materialize css default size*/
     width: auto !important;
     background-color: #f2a365 !important;
-    color: f2a365;
+    color: #f2a365;
     border: none;
 }
 
@@ -107,6 +122,11 @@ body .pageone {
     height: 60px;
     margin: auto;
     margin-top: 0px !important;
+    background-color:#222831 !important;
+}
+
+.logo:focus {
+    background-color: #222831 !important;    
 }
 
 .circleImage {
@@ -151,22 +171,43 @@ body .pageone {
     border-radius: 50%;
 }
 
-.chevronpageone{
+.chevron {
     display: block;
     margin: auto;
-    margin-top: 10%;
+}
+
+.chevronpageone {
+    margin-top: 8%;
 }
 
 .chevronpagetwo{
-    display: block;
-    margin: auto;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
+}
+
+.chevronupsidedown {
+    transform: rotate(0.5turn);
 }
 
 .chevron img {
     color: #ececec;
     width: 40px;
     height: 80px;
+}
+
+.chevron button {
+    background: transparent;
+    border: none !important;
+    font-size:0;
+    background-color:#222831 !important;
+}
+
+.chevron button:hover {
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.chevron button:active {
+    background-color:#222831 !important;
 }
 
 /* styling or all icons */
