--- a/css/styling.css
+++ b/css/styling.css
@@ -248,6 +248,43 @@ body .pageone {
     color: white;
 }
 
+.enlargedblogposts {
+    display: block;
+    position: relative;
+    width: 80%;
+    height: 80%;
+    margin-top: 10%;
+    margin: auto;
+    background-color: #ffffff;
+    opacity: 100%;
+}
+
+.formgrid {
+    color: black;
+    font-size: 20px;
+    font-family: Courier;
+    display: grid;
+    margin: auto;
+    margin-top: 20px;
+    width: 70%;
+    /* three columns in the grid*/
+    grid-template-columns: 1fr 1fr; 
+    gap: 5px;
+}
+
+.submitbutton {
+    display: block;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ff6768;
+    border: none;
+    margin-top: 5%;
+    border-radius: 5%;
+}
+
+
+
 /*
 .projectshome {
 
