--- a/css/styling.css
+++ b/css/styling.css
@@ -79,6 +79,7 @@ body .pageone {
     font-size: 20px;
     font-family: Courier;
     display: grid;
+    position: relative;
     margin: auto;
     margin-top: 20px;
     width: 30%;
@@ -87,6 +88,12 @@ body .pageone {
     gap: 5px;
 }
 
+.fixedcenter {
+    position: fixed;
+    left: 50%;
+    top:50%;
+    transform: translateX(-50%, -50%);
+}
 
 .navigationbar button {
     /*Must use important to overide materialize css defaults*/
