--- a/css/styling.css
+++ b/css/styling.css
@@ -74,6 +74,13 @@ body .pageone {
     width: 60%;
 }
 
+.disclaimer {
+    width: 60%;
+    color: black;
+    margin: auto;
+    text-align: center;
+}
+
 .navigationbar {
     color: black;
     font-size: 20px;
@@ -272,11 +279,11 @@ body .pageone {
     font-family: Courier;
     display: grid;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 5%;
     width: 70%;
     /* three columns in the grid*/
     grid-template-columns: 1fr 1fr; 
-    gap: 5px;
+    gap: 4%;
 }
 
 .submitbutton {
@@ -290,18 +297,11 @@ body .pageone {
     border-radius: 5%;
 }
 
-
-
-/*
-.projectshome {
-
+.fixedformmessage {
+    position: fixed;
+    margin: auto;
+    margin-top: 50%;
+    width: 30%;
+    height: 10%;
+    background-color: #ff6768;
 }
-
-.experiencehome {
-
-}
-
-.educationhome {
-
-}
-*/
