--- a/css/post.css
+++ b/css/post.css
@@ -16,6 +16,7 @@
     margin-top: 30px;
     margin-left: 20px;
     width: auto;
+    /*height: 600px;*/
     height: 600px;
     background-color: #222831;
     float: right;
